# Erata

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: generate.py  index.html  template.html  test_data.json
include/: alloc.hpp  file_logger.hpp  pointer_types.hpp  record.hpp  serialization.hpp  spd_file_logger.hpp  stl_containers.hpp  types.hpp  writer_concept.hpp
src/: CMakeLists.txt  alloc.cpp
tests/: CMakeLists.txt  alloc.test.cpp  alloc_main.test.cpp  alloc_singlethreaded.test.cpp  container_types.test.cpp
tests/include/: test_writer.hpp
